tests/ui/basic/non_bool_condition.rs
use metamatch::eval;

fn main() {
    eval! {
        if 42 { }
    };
}
